fixed issue with map since it was not showing up at all

--- a/public/css/map.css
+++ b/public/css/map.css
@@ -42,6 +42,8 @@ html, body {
   flex-direction: column;
   height: 100vh;
   width: 100%;
+  padding-bottom: 60px;
+  box-sizing: border-box;
 }
 
 .content {
